<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    tools:context="com.herokuapp.ezhao.codepathimagesearch.activities.SearchOptionsActivity">


    <TextView
        android:id="@+id/tvSizeLabel"
        android:text="@string/option_array_sizes_prompt"
        android:textSize="16sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spSizePicker"
        android:entries="@array/option_array_sizes"
        android:textSize="16sp"
        android:layout_toRightOf="@id/tvSizeLabel"
        android:layout_toEndOf="@id/tvSizeLabel"
        android:layout_alignBottom="@id/tvSizeLabel"
        android:layout_alignTop="@id/tvSizeLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvColorLabel"
        android:text="@string/option_array_color_prompt"
        android:textSize="16sp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_below="@id/tvSizeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spColorPicker"
        android:entries="@array/option_array_colors"
        android:textSize="16sp"
        android:layout_toRightOf="@id/tvColorLabel"
        android:layout_toEndOf="@id/tvColorLabel"
        android:layout_alignBottom="@id/tvColorLabel"
        android:layout_alignTop="@id/tvColorLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTypeLabel"
        android:text="@string/option_array_type_prompt"
        android:textSize="16sp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_below="@id/tvColorLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spTypePicker"
        android:entries="@array/option_array_types"
        android:textSize="16sp"
        android:layout_toRightOf="@id/tvTypeLabel"
        android:layout_toEndOf="@id/tvTypeLabel"
        android:layout_alignBottom="@id/tvTypeLabel"
        android:layout_alignTop="@id/tvTypeLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSiteLabel"
        android:text="@string/option_array_site_prompt"
        android:textSize="16sp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_below="@id/tvTypeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etSiteQuery"
        android:hint="@string/option_array_site_hint"
        android:textSize="16sp"
        android:layout_toRightOf="@id/tvSiteLabel"
        android:layout_toEndOf="@id/tvSiteLabel"
        android:layout_alignBottom="@id/tvSiteLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvSiteLabel"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save_label"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
